test/distributions/bradc/blkCyc/blkCycSliceOOB.good
blkCycSliceOOB.chpl:16: error: halt reached - indexing out of bounds in dimension 1: [11] but array bounds are 1..10
